0.05 alignment correction

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,13 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
+    display: flex;
 }
 
 header {
@@ -14,24 +16,25 @@ header {
     color: #fff;
     padding: 10px;
     text-align: center;
+    width: 100%;
 }
 
 main {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    width: 100%;
     padding: 20px;
 }
 
 #menu {
-    width: 100%;
+    width: 200px;
     background-color: #f0f0f0;
     padding: 20px;
+    flex-shrink: 0;
 }
 
 #content {
-    flex: 1;
-    width: 100%;
+    flex-grow: 1;
     padding: 20px;
 }
 
@@ -39,8 +42,6 @@ main {
 #menu ul {
     list-style-type: none;
     padding: 0;
-    display: flex;
-    justify-content: space-around;
 }
 
 #menu ul li {
